[package]
name = "godaddy_dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godaddy_api = "2.0.1"
http = "1.0.0"
reqwest = "0.11.23"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
